Small closure example

--- a/Closures/index.html
+++ b/Closures/index.html
@@ -4,6 +4,11 @@
         <title>Counters</title>
     </head>
     <body>
+        <button id="first">First</button>
+        <button id="second">second</button>
+        <button id="third">third</button>
+
         <script type="text/javascript" src="app.js"></script>
+
     </body>
 </html>
